--- a/apps/gelt-mash/src/style.css
+++ b/apps/gelt-mash/src/style.css
@@ -9,6 +9,10 @@
 }
 
 @layer utilities {
+    button {
+        @apply px-4 py-2 rounded bg-blue-300 border border-blue-500;
+    }
+
     .content-px {
         @apply px-6;
     }
