--- a/apps/gelt-mash/src/style.css
+++ b/apps/gelt-mash/src/style.css
@@ -13,6 +13,10 @@
         @apply px-4 py-2 rounded bg-blue-300 border border-blue-500;
     }
 
+    input {
+        @apply px-4 py-2 rounded border border-gray-300 text-gray-900 placeholder:text-gray-500;
+    }
+
     .content-px {
         @apply px-6;
     }
