--- a/apps/gelt-mash/src/style.css
+++ b/apps/gelt-mash/src/style.css
@@ -8,13 +8,80 @@
     box-sizing: border-box;
 }
 
-@layer utilities {
+@layer components {
     button {
-        @apply px-4 py-2 rounded bg-blue-300 border border-blue-500;
+        @apply h-[40px] px-[24px]
+            rounded-full
+            flex items-center justify-center;
+
+        &:has(.svg-inline--fa) {
+            @apply pl-[16px] gap-[8px];
+        }
+
+        &[elevated] {
+            @apply bg-surface-container-low text-primary elevation-1 enabled:hover:elevation-2 disabled:button-disabled enabled:button-enabled;
+        }
+
+        &[filled] {
+            @apply bg-primary text-primary-content enabled:hover:elevation-1 disabled:button-disabled enabled:button-enabled;
+        }
+
+        &[tonal] {
+            @apply bg-secondary-container text-secondary-container-content enabled:hover:elevation-1 disabled:button-disabled enabled:button-enabled;
+        }
+
+        &[outline] {
+            @apply text-primary border border-outline enabled:hover:bg-primary/[0.2] enabled:focus:bg-primary/[0.2] enabled:active:bg-primary/[0.2] disabled:border-outline/[0.12] disabled:text-surface-content/[0.38] enabled:button-enabled;
+        }
+
+        &[text] {
+            @apply px-[12px] text-primary enabled:hover:bg-primary/[0.2] enabled:focus:bg-primary/[0.2] enabled:active:bg-primary/[0.2] disabled:text-surface-content/[0.38] enabled:button-enabled;
+
+            &:has(.svg-inline--fa) {
+                @apply pr-[16px];
+            }
+        }
+
+        .svg-inline--fa {
+            width: 18px;
+            height: 18px;
+        }
     }
 
     input {
         @apply px-4 py-2 rounded border border-gray-300 text-gray-900 placeholder:text-gray-500;
+    }
+}
+
+@layer utilities {
+    .button-disabled {
+        @apply bg-surface-content/[0.12] text-surface-content/[0.38];
+    }
+
+    .button-enabled {
+        @apply hover:button-brightness focus:button-focussed active:button-brightness;
+    }
+
+    .button-focussed {
+        @apply button-brightness outline outline-2 outline-secondary outline-offset-2;
+    }
+
+    .button-brightness {
+        @apply enabled:brightness-[0.9];
+    }
+
+    .elevation-1 {
+        box-shadow:
+            0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+            0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+            0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+    }
+
+    .elevation-2 {
+        box-shadow:
+            0px 3px 3px -2px rgba(0, 0, 0, 0.2),
+            0px 3px 4px 0px rgba(0, 0, 0, 0.14),
+            0px 1px 8px 0px rgba(0, 0, 0, 0.12);
     }
 
     .content-px {
