--- a/apps/gelt-mash/src/style.css
+++ b/apps/gelt-mash/src/style.css
@@ -65,6 +65,9 @@
     input {
         @apply px-4 py-2 rounded border border-gray-300 text-gray-900 placeholder:text-gray-500;
     }
+
+    .dice {
+    }
 }
 
 @layer utilities {
