--- a/apps/gelt-mash/src/style.css
+++ b/apps/gelt-mash/src/style.css
@@ -66,7 +66,8 @@
         @apply px-4 py-2 rounded border border-gray-300 text-gray-900 placeholder:text-gray-500;
     }
 
-    .dice {
+    .card {
+        @apply p-4 bg-secondary-container text-secondary-container-content rounded-lg;
     }
 }
 
